@@ -193,6 +193,8 @@ Optimizations
 
 * GITHUB#14331: Speedup merging of HNSW graphs. (Mayya Sharipova, Tom Veasey)
 
+* GITHUB#14383: Use FixedLengthBytesRefArray in OneDimensionBKDWriter to hold split values. (Ignacio Vera)
+
 Bug Fixes
 ---------------------
 
